--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,6 @@
-h1 {text-align: center;}
+h1 
+    {text-align: center;}
+#clock 
+    {text-align: center;
+    font-size: xx-large;
+    font-weight: bold;}
